...
            case .anime:
                AnimeDetailLoaderView(animeId: id)
            case .manga:
                MangaDetailLoaderView(mangaId: id)
            }
        }
        .accessibilityIdentifier("media_detail_sheet")
        #if os(iOS)
        .presentationDragIndicator(.hidden)
        #endif
    }
}

...
